Update Build a Survey form FCC.html
Format was added to the "survey div" it should now be centered, the dropdown is missing.

--- a/Build a Survey form FCC.html
+++ b/Build a Survey form FCC.html
@@ -5,10 +5,12 @@
 		<style>
 			body{
 				text-align: center;
+				
 			}
 			.surform {
 				background-color: azure;
-				
+				text-align: left;
+				margin-right: 1.5cm auto 0 auto;
 			}
 		</style>
 	</head>
@@ -17,7 +19,7 @@
 			<h1 id="title">Survey Form for FreeCodeCamp</h1>
 			<p id="description">This survey is to know some things about you</p>
 		</header>
-		<div id="survey div" >
+		<div id="survey div" class="surform">
 			<form id="survey-form">
 				<div id="name-div">
 					<label id="name-label" for="name">Name</label><br>
