Update Build a Survey form FCC.html
The color of the drop-down menu was changed.

--- a/Build a Survey form FCC.html
+++ b/Build a Survey form FCC.html
@@ -12,7 +12,7 @@
 				margin-right: 1.5cm auto 0 auto;
 			}
 			.drop {
-				background-color: #5353c6;
+				background-color: #9f9fdf;
 				color: white;
 			}
 		</style>
