Update Build a Survey form FCC.html
The <div> with id="survey div" was aligned to the center.

--- a/Build a Survey form FCC.html
+++ b/Build a Survey form FCC.html
@@ -10,6 +10,7 @@
 				background-color: azure;
 				text-align: left;
 				margin-right: 1.5cm auto 0 auto;
+				display: inline-block;
 			}
 			.drop {
 				background-color: #9f9fdf;
